salesforce/force-app/main/default/objects/Tableting_Detail__c/Tableting_Detail__c.object-meta.xml
<CustomObject>
    <description>Tablet compression and coating process costs</description>
    <label>Tableting Detail</label>
    <nameField>
        <displayFormat>REC-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tableting Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>