salesforce/force-app/main/default/objects/Tableting_Detail__c/fields/Compression_Cost__c.field-meta.xml
<CustomField>
    <fullName>Compression_Cost__c</fullName><label>Compression Cost</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>