salesforce/force-app/main/default/objects/Tableting_Detail__c/fields/Type_of_Coating__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Coating__c</fullName><label>Type of Coating</label><length>200</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique>
</CustomField>