salesforce/force-app/main/default/objects/Tableting_Detail__c/fields/Wastage_Value__c.field-meta.xml
<CustomField>
    <fullName>Wastage_Value__c</fullName><label>Wastage Value</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>